--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -1,5 +1,12 @@
 <main class="main">
   <div class="inner">
+  <% if user_signed_in? %>
+    <div class ="greeting">
+            こんにちは、
+            <%= link_to "#{current_user.name}", user_path(current_user), class: :greeting__link%>
+              さん
+              </div>
+            <% end %>
     <div class="card__wrapper">
     <%= render partial: "prototype", collection: @prototypes %>
     </div>
